golden/error/lex_unmatched_lbrace_eof.test
{a

# output:
 --> stdin:2:0
  |
2 | 
  | ^
Error: Expected '}'.

 --> stdin:1:0
  |
1 | {a
  | ^
Note: Unmatched '{' opened here.
